5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1826_1645.log
== TEST (2019-06-12 18:06:23) 
-- CODE:
from numpy import*

a = zeros(3, dtype=int)
b = 0
for i in range(size(a)):
	if	(a[i] >= 2000):
		b = a + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:07:06) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))
a = zeros(3, dtype=int)
b = 0
for i in range(size(vet)):
	if	(a[i] >= 2000):
		b = b + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:08:18) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))
a = zeros(3, dtype=int)
b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:15:32) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		g = g + 1
		
a = zeros(g, dtype=int)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:16:21) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		g = g + 1
		
	a = zeros(g, dtype=int)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:19:21) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = rezos(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		g = g + 1
		a = a[g] + i
		

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:20:12) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		g = g + 1
		a = a[g] + i
		

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:21:22) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		a = a[g] + i
		g = g + 1
		

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:21:58) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		a[g] = a[g] + i
		g = g + 1
		

print(a)
-- EXECUTION TIME:
0.984474
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 0 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:22:01) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		a[g] = a[g] + i
		g = g + 1
		

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:23:16) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		g = g + 1
		a[g] = a[g] + i
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:24:39) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[i] >= 2000):
		a[g] = a[g] + i
	g = g + 1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:09) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:57) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
	g = g + 1	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:08) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:29:44) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
ṕrint(a)
-- EXECUTION TIME:
0.832999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1826/1645/main.py", line 16, in <module>
    \u1e55rint(a)
NameError: name '\u1e55rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:45) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
ṕrint(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:30:36) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
print(a)
-- EXECUTION TIME:
1.11952
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
digite o vetor: 3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
digite o vetor: 5
[0 5 6 7 9]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:30:40) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:31:08) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:31:36) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:31:58) 
-- CODE:
from numpy import*
vet = array(eval(input("digite o vetor: ")))

b = 0
for i in range(size(vet)):
	if	(vet[i] >= 2000):
		b = b + 1
print(b)
g = 0
a = zeros(b, dtype=int)
for h in range(size(vet)):
	
	if	(vet[h] >= 2000):
		a[g] = a[g] + h
		g = g + 1
		
print(a)
-- EXECUTION TIME:
1.04262
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 5 6 7 9]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
